# StandUP_project

./: .gitignore  AGENTS.md  README.md  dbt_project.yml  docker-compose.yml  pyproject.toml
!archive_layer/: videos_meta.sql
docker/superset/: Dockerfile
initdb/: init_schema.sql
models/core/: core_categories.sql  core_channels.sql  core_chapters.sql  core_classifications.sql  core_playlists.sql  core_sound_features.sql  core_subcategories.sql  core_transcript_segments.sql  core_videos.sql  core_videos_meta.sql  schema.yml
models/dds/: schema.yml
models/dds/dim/: dim_category.sql  (+5 more)
models/marts/: chapters_count.sql  history_date.sql  mart_chapters_metrics.sql  mart_dwh_statistics.sql  mart_video_daily_snapshot.sql  mart_video_metrics.sql  schema.yml  statistic.sql  time_of_chapters.sql  video_meta.sql  videos_meta.sql
models/staging/: _sources.yml  schema.yml  stg_chapters.sql  stg_classifications.sql  stg_sound_features.sql  stg_transcripts.sql  stg_videos_base.sql
models/superset/: chapters_metrics.sql  dwh_statistics.sql  schema.yml  video_daily_snapshot.sql  video_metrics.sql
seeds/: dim_date.csv  schema.yml
src/: Jupiter_test.ipynb  SQL.sql  SoundFileClassifier  SoundFileClassifier.swift  SoundFileClassifier_app  categories.yaml  config.py  data_pipeliine.py  database.py  dbt_pipeline.py  dbt_run.py  docker-compose.yml  llm.py  llm_chapter.py  main.py  models.py  pydantic_models.py  refresh_meta.py  sound_classifier  sound_classifier.py  sound_classifier.swift  transcribe.py  utils.py  youtube_downloader.py
src/initdb/: init_schema.sql
src/laughter_segmentation/: inference.py
src/tests/: test_dbt_pipeline.py  test_pipeline_components.py
standup_project/: dbt_project.yml
standup_project/tests/: core_schema.yml  test_core_transcript_segments_unique.sql
(+46 files in other folders)
