[project]
name = "standup-project"
version = "0.1.0"
description = "A pipeline for extracting audio from YouTube playlists, transcribing it, generating topic lists with timestamps, and analyzing the audio for laughter events with their time markers."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "dbt-core>=1.10.13",
    "dbt-postgres>=1.9.1",
    "minio>=7.2.16",
    "numba>=0.62",
    "parakeet-mlx>=0.4",
    "psycopg[binary]>=3.2.9",
    "pydantic>=2.12",
    "pydantic-settings>=2.11",
    "yt-dlp>=2025.9.26",
]
